--- a/styles/codesync-atom.less
+++ b/styles/codesync-atom.less
@@ -4,5 +4,29 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.codesync-atom {
+.codesync-status-bar {
+
+  background-color: inherit;
+  border: none;
+
+  .img {
+    width: 20px;
+  }
+}
+
+.codesync-view {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 30px;
+
+  .img {
+    margin: 10px 0;
+  }
+  
+  .img-large {
+    width: 50px;
+  }
 }
